<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout tools:showIn="@layout/activity_beach_maps" tools:context=".activities.BeachMapsActivity" app:layout_behavior="@string/appbar_scrolling_view_behavior" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.gms.maps.MapView android:layout_height="451dp" android:layout_width="361dp" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/cardView" android:layout_marginBottom="8dp" android:layout_marginEnd="8dp" android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:id="@+id/mapView"/>
    <androidx.cardview.widget.CardView android:layout_height="127dp" android:layout_width="356dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp" android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:id="@+id/cardView" app:layout_constraintHorizontal_bias="0.533" app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent" android:layout_width="match_parent">
            <ImageView android:layout_height="98dp" android:layout_width="121dp" app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:id="@+id/currentImage" app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/beach_image_placeholder" tools:srcCompat="@tools:sample/backgrounds/scenic"/>
            <TextView android:layout_height="21dp" android:layout_width="175dp" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/currentDescription" android:id="@+id/currentTitle" app:layout_constraintVertical_bias="0.722" app:layout_constraintEnd_toStartOf="@+id/currentImage" android:text="@string/beach_title_placeholder"/>
            <TextView android:layout_height="48dp" android:layout_width="173dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="24dp" android:id="@+id/currentDescription" app:layout_constraintHorizontal_bias="0.521" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/currentImage" android:text="@string/beach_description_placeholder"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>